[sdist]
formats=bztar,zip

#[bdist]
#formats=wheel

[bdist_wheel]
universal=1

[aliases]
user =  develop --install-dir ~/lib/python/ --script-dir ~/bin
devel = develop --install-dir . --script-dir .
daily =   egg_info --tag-svn-revision --tag-build=dev sdist upload
release = egg_info sdist register upload

[metadata]
description-file = README.rst

